--- a/pom.xml
+++ b/pom.xml
@@ -45,9 +45,16 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.2.2</version>
+        <configuration>
+          <descriptors>
+            <descriptor>src/main/assembly/package.xml</descriptor>
+          </descriptors>
+        </configuration>
+        <!-- Para relacionar a montagem da distro com a fase de empacotamento: -->
+        <!-- 
         <executions>
           <execution>
-            <id>bundle-project-sources</id>
+            <id>project-bundle</id>
             <phase>package</phase>
             <goals>
               <goal>single</goal>
@@ -59,6 +66,7 @@
             </configuration>
           </execution>
         </executions>
+        -->
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
