--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <sourceVersion>1.6</sourceVersion>
     <mainClass>cardgame.DebugApplication</mainClass>
   </properties>
   
